..F....... [ZBXNEXT-743] fixed precise alignment of value and units

--- a/sass/stylesheets/sass/components/_svg-gauge.scss
+++ b/sass/stylesheets/sass/components/_svg-gauge.scss
@@ -47,10 +47,6 @@
 		fill: $font-alt-color;
 	}
 
-	.svg-gauge-value-and-units-multi-line {
-		dominant-baseline: text-before-edge;
-	}
-
 	.svg-gauge-value,
 	.svg-gauge-units {
 		text-anchor: middle;
