--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -3247,8 +3247,6 @@ section {
     text-anchor: middle; }
   .svg-gauge .svg-gauge-value-and-units-no-data {
     fill: #768d99; }
-  .svg-gauge .svg-gauge-value-and-units-multi-line {
-    dominant-baseline: text-before-edge; }
   .svg-gauge .svg-gauge-value,
   .svg-gauge .svg-gauge-units {
     text-anchor: middle; }
